aamath: don't hardcode /opt/local
git-svn-id: https://svn.macports.org/repository/macports/trunk@73216 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/aamath/Portfile
+++ b/dports/math/aamath/Portfile
@@ -25,7 +25,7 @@ depends_lib         port:readline port:ncurses
 
 worksrcdir          aamath
 
-configure.cppflags-append -I/opt/local/include/ncurses
+configure.cppflags-append -I${prefix}/include/ncurses
 configure.ldflags-append -lreadline -ltermcap -lncurses
 
 patchfiles          patch-Makefile.diff
