--- a/dports/perl/p5-snmp_session/Portfile
+++ b/dports/perl/p5-snmp_session/Portfile
@@ -1,18 +1,22 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem              1.0
+PortSystem          1.0
 
-PortGroup               perl5 1.0
+PortGroup           perl5 1.0
 
-perl5.setup             SNMP_Session 1.12
-maintainers             nomaintainer
-description             A perl5 module providing rudimentary access to SNMPv1 and v2 agents.
-long_description        ${description}
-master_sites		http://www.switch.ch/misc/leinen/snmp/perl/dist/ \
-			http://www.switch.ch/misc/leinen/snmp/perl/dist/old
+perl5.setup         SNMP_Session 1.12
+platforms           darwin
+maintainers         nomaintainer
+supported_archs     noarch
 
-checksums               md5 5f6b365b4c3815b13d7a902d94e254af
-homepage		http://www.switch.ch/misc/leinen/snmp/perl/
-platforms               darwin
+description         A perl5 module providing rudimentary access to SNMPv1 \
+                    and v2 agents.
 
-supported_archs noarch
+long_description    ${description}
+
+homepage            http://www.switch.ch/misc/leinen/snmp/perl/
+master_sites        http://www.switch.ch/misc/leinen/snmp/perl/dist/ \
+                    http://www.switch.ch/misc/leinen/snmp/perl/dist/old
+
+checksums           md5     5f6b365b4c3815b13d7a902d94e254af
