p5-snmp_session: update to 1.13, new homepage and maintainer, indicate license; see #27146
git-svn-id: https://svn.macports.org/repository/macports/trunk@73219 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-snmp_session/Portfile
+++ b/dports/perl/p5-snmp_session/Portfile
@@ -2,12 +2,12 @@
 # $Id$
 
 PortSystem          1.0
-
 PortGroup           perl5 1.0
 
-perl5.setup         SNMP_Session 1.12
+perl5.setup         SNMP_Session 1.13
 platforms           darwin
-maintainers         nomaintainer
+maintainers         l2g.to:larry+macports
+license             Artistic 2.0+
 supported_archs     noarch
 
 description         A perl5 module providing rudimentary access to SNMPv1 \
@@ -15,8 +15,11 @@ description         A perl5 module providing rudimentary access to SNMPv1 \
 
 long_description    ${description}
 
-homepage            http://www.switch.ch/misc/leinen/snmp/perl/
-master_sites        http://www.switch.ch/misc/leinen/snmp/perl/dist/ \
-                    http://www.switch.ch/misc/leinen/snmp/perl/dist/old
+homepage            http://code.google.com/p/snmp-session/
+master_sites        googlecode:snmp-session
 
-checksums           md5     5f6b365b4c3815b13d7a902d94e254af
+checksums           sha1    7f4de0a9104ad6a0fb71af23ce83c71609c7e674 \
+                    rmd160  dee9008a0f378dc89ea7d89fe90b463b19826b42
+
+livecheck.url       ${homepage}
+livecheck.regex     /${perl5.module}-(\[0-9.\]+)${extract.suffix}
