stunnel: update to 4.33 (#27112) and fix permissions of the chroot jail (#22376)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73221 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/stunnel/Portfile
+++ b/dports/security/stunnel/Portfile
@@ -4,8 +4,7 @@
 PortSystem			1.0
 
 name				stunnel
-version				4.32
-revision        1
+version				4.33
 categories			security net
 maintainers			nomaintainer
 description			SSL tunneling program
@@ -19,19 +18,21 @@ platforms			darwin
 homepage			http://www.stunnel.org/
 master_sites		${homepage}download/stunnel/src/ \
                     ftp://stunnel.mirt.net/stunnel/
-checksums           md5     72379c615c5a4986c7981d0941ed2e6b \
-                    sha1    e9be8b9150d1c901a7c37b58494e351815147a79 \
-                    rmd160  fb5db2098d25ccbef553579e870331763dabbf2e
+
+checksums           sha1    695c7ef834952cb8ddbc790e10b6e32798fc2767 \
+                    rmd160  b9d32b4c17cf250d3284e020bb9c6b3fc4463cc5
+
 depends_lib			port:openssl
 patchfiles			patch-configure \
 					patch-tools-stunnel.cnf
-configure.args		--mandir=${prefix}/share/man \
-					--disable-libwrap
+
+configure.args		--disable-libwrap
+
 default_variants	+libwrap
 
 destroot.keepdirs   ${destroot}${prefix}/var/lib/stunnel
 post-destroot {
-	xinstall -d -m 770 "${destroot}${prefix}/var/lib/stunnel/"
+	xinstall -d -m 770 -o nobody ${destroot}${prefix}/var/lib/stunnel/
 
 	# Tell the user about the stupid fake certificate that we provide.
 	ui_msg "A fake certificate has been installed as ${prefix}/etc/stunnel/stunnel.pem"
