p5-timedate: fix typo in maintainers line, adjust download location; see #27187
git-svn-id: https://svn.macports.org/repository/macports/trunk@73225 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-timedate/Portfile
+++ b/dports/perl/p5-timedate/Portfile
@@ -3,9 +3,9 @@
 PortSystem          1.0
 PortGroup           perl5 1.0
 
-perl5.setup         TimeDate 1.20 ../../authors/id/G/GB/GBARR
+perl5.setup         TimeDate 1.20 Time
 platforms           darwin
-maintainers         maintainers         l2g.to:larry+macports
+maintainers         l2g.to:larry+macports
 license             Artistic/GPL
 supported_archs     noarch
 
