depend on fping. it makes things speedier.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73242 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/shmux/Portfile
+++ b/dports/sysutils/shmux/Portfile
@@ -16,6 +16,7 @@ homepage            http://web.taranis.org/shmux/
 platforms           darwin
 
 depends_build       port:pcre
+depends_run         port:fping
 
 master_sites        http://web.taranis.org/shmux/dist/
 extract.suffix      .tgz
