--- a/dports/print/libharu/Portfile
+++ b/dports/print/libharu/Portfile
@@ -3,13 +3,11 @@
 PortSystem              1.0
 
 name                    libharu
-version                 2.1.0
-revision    0
+version                 2.2.0
 categories              print
 platforms               darwin
 maintainers             and.damore openmaintainer
-description             libHaru is a free, cross platform, open source library for generating PDF \
-files. 
+description             a free, cross platform, open source library for generating PDF files
 long_description        ${description} \
                         It supports supporting the following features: \
                         1.      Generating PDF files with lines, text, images. \
@@ -27,9 +25,9 @@ use_bzip2               yes
 
 depends_lib             port:libpng
 
-checksums   md5  f6ceb28bd538757398b2180fe200faed \
-      sha1  1656f5ffeeb566240be2b24ade3849d22e2a0594 \
-      rmd160  923684a2f127ef0a738d840bc50112f8eb829249
+checksums               md5     1f366cfcb3d38627bad2654073e3307f \
+                        sha1    a76765426165974395fdc0e4de6a81eeaf7a237a \
+                        rmd160  3e2cbef26fcd89f8664acbfcfdc8d88caf2015da
 
 configure.args-append --with-png=${prefix} \
                       --with-zlib=${prefix}
