--- a/dports/aqua/emacs-app/Portfile
+++ b/dports/aqua/emacs-app/Portfile
@@ -1,8 +1,11 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
+
 name		emacs-app
 version		23.2
+revision	1
 categories	aqua editors
 maintainers	css
 description	The GNU Emacs text editor (Cocoa version)
@@ -30,6 +33,11 @@ depends_lib     port:ncurses
 use_parallel_build      yes
 
 configure.args	--with-ns --without-x --without-dbus
+
+variant fullscreen description {Add fullscreen patch from http://gist.github.com/291150 as mentioned in http://www.sanityinc.com/full-screen-support-for-cocoa-emacs-on-osx} {
+    patchfiles patch-fullscreen.diff
+    patch.args -p1
+}
 
 destroot {
         system "cd ${worksrcpath} && make install"
