--- a/dports/perl/p5-text-multimarkdown/Portfile
+++ b/dports/perl/p5-text-multimarkdown/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 PortGroup           perl5 1.0
 
 perl5.setup         Text-MultiMarkdown 1.000032
-maintainers         alakazam
+maintainers         nomaintainer
 description         Convert MultiMarkdown syntax to (X)HTML
 long_description    This module implements the MultiMarkdown markdown syntax \
                     extensions from: http://fletcherpenney.net/multimarkdown/
