--- a/dports/php/php5-eaccelerator/Portfile
+++ b/dports/php/php5-eaccelerator/Portfile
@@ -7,7 +7,7 @@ epoch             1
 php5extension.setup eaccelerator 0.9.6.1
 categories        php www devel
 platforms         darwin freebsd openbsd
-maintainers       alakazam
+maintainers       nomaintainer
 homepage          http://eaccelerator.net/
 description       php5 extension for PHP acceleration, optimization, and dynamic content caching
 long_description \
