--- a/dports/python/py25-demjson/Portfile
+++ b/dports/python/py25-demjson/Portfile
@@ -7,7 +7,7 @@ name              py25-demjson
 version           1.4
 categories        python
 platforms         darwin
-maintainers       alakazam
+maintainers       nomaintainer
 
 description       encoder, decoder, and validator for JSON compliant with RFC 4627
 long_description  encoder, decoder, and lint/validator for JSON (JavaScript \
