--- a/dports/python/py25-morbid/Portfile
+++ b/dports/python/py25-morbid/Portfile
@@ -7,7 +7,7 @@ name              py25-morbid
 version           0.8.7.3
 categories        python
 platforms         darwin
-maintainers       alakazam
+maintainers       nomaintainer
 
 description       A Twisted-based publish/subscribe messaging server that uses the STOMP protocol
 long_description  Morbid is a STOMP publish/subscribe server with absolutely \
