--- a/dports/python/py25-opengl/Portfile
+++ b/dports/python/py25-opengl/Portfile
@@ -8,7 +8,7 @@ version              3.0.1b2
 categories           python graphics
 platforms            darwin
 supported_archs      noarch
-maintainers          alakazam
+maintainers          nomaintainer
 
 description          Python binding to OpenGL
 long_description     PyOpenGL is the cross platform Python binding to OpenGL \
