--- a/dports/python/py25-uuid/Portfile
+++ b/dports/python/py25-uuid/Portfile
@@ -7,7 +7,7 @@ name              py25-uuid
 version           1.30
 categories        python
 platforms         darwin
-maintainers       alakazam
+maintainers       nomaintainer
 
 description       UUID objects (universally unique identifiers) according to RFC 4122.
 long_description  This module is automatically provided in python 2.5 and is \
