--- a/dports/python/py26-django-extensions/Portfile
+++ b/dports/python/py26-django-extensions/Portfile
@@ -7,7 +7,7 @@ name                py26-django-extensions
 version             0.4.1
 categories-append   www
 platforms           darwin
-maintainers         alakazam
+maintainers         nomaintainer
 homepage            http://code.google.com/p/django-command-extensions/
 description         Global custom management extensions for the Django Framework.
 long_description    ${description}
