--- a/dports/sysutils/keychain/Portfile
+++ b/dports/sysutils/keychain/Portfile
@@ -6,7 +6,7 @@ name            keychain
 version         2.7.0
 categories      sysutils security
 platforms       darwin freebsd
-maintainers     alakazam
+maintainers     nomaintainer
 description     A user-friendly front-end to ssh-agent(1)
 
 long_description \
