--- a/dports/www/phpmyadmin/Portfile
+++ b/dports/www/phpmyadmin/Portfile
@@ -7,7 +7,7 @@ name                phpmyadmin
 set my_name         phpMyAdmin
 version             3.3.5.1
 categories          www php databases
-maintainers         alakazam
+maintainers         nomaintainer
 description         A tool written in PHP intended to handle the \
                     administration of MySQL over the Web.
 long_description    phpMyAdmin is a tool written in PHP intended to handle \
