--- a/dports/aqua/fltk/Portfile
+++ b/dports/aqua/fltk/Portfile
@@ -7,7 +7,7 @@ version         1.1.10
 revision        1
 categories      aqua devel
 platforms       macosx
-maintainers     alakazam openmaintainer
+maintainers     nomaintainer
 description     Fast Light Tool Kit
 
 long_description \
