--- a/dports/databases/unixODBC/Portfile
+++ b/dports/databases/unixODBC/Portfile
@@ -8,7 +8,7 @@ version             2.3.0
 revision            1
 categories          databases
 platforms           darwin
-maintainers         alakazam cotsworth.com:simon
+maintainers         cotsworth.com:simon
 description         Provides ODBC 3 connectivity for Unix
 
 long_description    The unixODBC project provides UNIX applications with the \
