--- a/dports/net/autossh/Portfile
+++ b/dports/net/autossh/Portfile
@@ -4,7 +4,7 @@ PortSystem        1.0
 name              autossh   
 version           1.4b
 categories        net sysutils
-maintainers       alakazam
+maintainers       nomaintainer
 homepage          http://www.harding.motd.ca/autossh/
 description       tool to restart terminated ssh sessions
 long_description  autossh is a program to start a copy of ssh and monitor \
