--- a/dports/python/py25-orbited/Portfile
+++ b/dports/python/py25-orbited/Portfile
@@ -7,7 +7,7 @@ name              py25-orbited
 version           0.7.10
 categories        python
 platforms         darwin
-maintainers       alakazam
+maintainers       nomaintainer
 
 description       Orbited provides a pure JavaScript/HTML socket in the browser.
 long_description  Orbited provides a pure JavaScript/HTML socket in the \
