--- a/dports/python/py25-pyglet/Portfile
+++ b/dports/python/py25-pyglet/Portfile
@@ -8,7 +8,7 @@ name                    py25-pyglet
 version                 1.1.4
 categories              python
 platforms               darwin
-maintainers             alakazam
+maintainers             nomaintainer
 
 description             A cross-platform windowing and multimedia library for Python.
 long_description        A cross-platform windowing and multimedia library for Python.
