--- a/dports/python/py25-recaptcha/Portfile
+++ b/dports/python/py25-recaptcha/Portfile
@@ -5,7 +5,7 @@ PortGroup		python25 1.0
 
 name			py25-recaptcha
 version			1.0.5
-maintainers		alakazam stechert
+maintainers		stechert
 description		Python recaptcha client
 long_description	Provides a CAPTCHA for Python using the reCAPTCHA service. Does not require any \
 			imaging libraries because the CAPTCHA is served directly from reCAPTCHA. Also \
