--- a/dports/python/py25-stomper/Portfile
+++ b/dports/python/py25-stomper/Portfile
@@ -7,7 +7,7 @@ name              py25-stomper
 version           0.2.2
 categories        python
 platforms         darwin
-maintainers       alakazam
+maintainers       nomaintainer
 
 description       A transport neutral client implementation of the STOMP protocol
 long_description  This is a python client implementation of the STOMP protocol. \
