--- a/dports/python/py26-django-debug-toolbar/Portfile
+++ b/dports/python/py26-django-debug-toolbar/Portfile
@@ -7,7 +7,7 @@ name                py26-django-debug-toolbar
 version             0.8.1
 categories-append   www
 platforms           darwin
-maintainers         alakazam
+maintainers         nomaintainer
 homepage            http://github.com/robhudson/django-debug-toolbar
 description         Configurable debug information for the Django Framework.
 long_description    A configurable set of panels for the Django Framework \
