--- a/dports/python/py26-gchartwrapper/Portfile
+++ b/dports/python/py26-gchartwrapper/Portfile
@@ -7,7 +7,7 @@ name                py26-gchartwrapper
 version             0.9
 categories-append   www
 platforms           darwin
-maintainers         alakazam
+maintainers         nomaintainer
 homepage            http://code.google.com/p/google-chartwrapper/
 description         Easily create Google charts using Python syntax and data objects.
 long_description    Python wrapper for the Google Chart API. The wrapper can \
