--- a/dports/python/py26-south/Portfile
+++ b/dports/python/py26-south/Portfile
@@ -8,7 +8,7 @@ name                py26-south
 version             0.7.1
 categories-append   www
 platforms           darwin
-maintainers         alakazam
+maintainers         nomaintainer
 homepage            http://south.aeracode.org/
 description         South provides intelligent schema migrations for Django apps
 long_description    South provides intelligent, database-independant, \
