--- a/dports/sysutils/mkpwd/Portfile
+++ b/dports/sysutils/mkpwd/Portfile
@@ -6,7 +6,7 @@ name			mkpwd
 version			0.7
 categories		sysutils
 platforms		darwin
-maintainers		alakazam
+maintainers		nomaintainer
 description		mkpwd is a scalable password generator
 long_description	${description}
 
