--- a/dports/sysutils/vcp/Portfile
+++ b/dports/sysutils/vcp/Portfile
@@ -7,7 +7,7 @@ name        vcp
 version     2.2
 platforms   darwin
 categories  sysutils
-maintainers alakazam
+maintainers nomaintainer
 description vcp copies files and directories in a curses interface.
 long_description   \
     vcp copies files and directories in a curses interface, with text \
