--- a/dports/textproc/sloccount/Portfile
+++ b/dports/textproc/sloccount/Portfile
@@ -6,7 +6,7 @@ name                sloccount
 version             2.26
 categories          textproc devel
 platforms           darwin
-maintainers         alakazam
+maintainers         nomaintainer
 description         program for counting lines of code in a large number of languages
 long_description    SLOCCount is a set of tools for counting physical Source \
                     Lines of Code (SLOC) in a large number of languages of a \
