add geoip variant; update secure_download md5
git-svn-id: https://svn.macports.org/repository/macports/trunk@73250 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/nginx/Portfile
+++ b/dports/www/nginx/Portfile
@@ -167,12 +167,12 @@ variant upload description {Enable Valery Kholodkov's upload module\
 }
 
 variant secure_download description {Enable Ngx http secure download \
-        (http://wiki.nginx.org/NginxHttpSecureDownload)} {
+        (http://wiki.nginx.org/HttpSecureDownload)} {
 
     set secure_download_distname Ngx_http_secure_download
     distfiles-append    ${secure_download_distname}.tar.gz:secure_download_module
     checksums-append    ${secure_download_distname}.tar.gz \
-                            md5     ae35f1355fd9f1aa6d54ea15eb413163
+                            md5     8d83bfb4853ed76eb22453712c394519
     configure.args-append   --add-module=${workpath}/${secure_download_distname}
     depends_lib-append  port:mhash
 }
@@ -195,6 +195,13 @@ variant redis description {Enable Ngx HTTP Redis module} {
     checksums-append    ${redis_distname}.tar.gz \
                             md5     c731d6ac14b4c8a99fda2c7e89356a8f
     configure.args-append   --add-module=${workpath}/${redis_distname}
+}
+
+variant geoip description {Enable Ngx http GeoIP module \
+        (http://wiki.nginx.org/HttpGeoIPModule)} {
+
+    configure.args-append  --with-http_geoip_module
+    depends_lib-append  port:libgeoip
 }
 
 livecheck.type      regex
