MyPaint: update to 0.9 (#27194) and add launcher in applications_dir
git-svn-id: https://svn.macports.org/repository/macports/trunk@73251 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/MyPaint/Portfile
+++ b/dports/graphics/MyPaint/Portfile
@@ -5,7 +5,7 @@ PortSystem                  1.0
 
 name                        MyPaint
 set my_name                 mypaint
-version                     0.8.2
+version                     0.9.0
 homepage                    http://mypaint.info/
 categories                  graphics
 maintainers                 ryandesign
@@ -24,9 +24,8 @@ long_description            ${name} is ${description}. It lets you focus on the 
 
 master_sites                http://download.gna.org/mypaint/
 
-checksums                   md5     4382912b5d70574a61dc53a2a10fe566 \
-                            sha1    f82ca2e25a1a1db291877a0fd0e170b2b7ce8da4 \
-                            rmd160  ebbbfdc42db2bb65ab9306fbb0d71c3b9edaa8f9
+checksums                   sha1    6c733a1bc87e237be18389aefb26a034b1229d24 \
+                            rmd160  07c83e5012400b9931a03bb750bf3f97da73bbd3
 
 depends_build               port:scons \
                             port:swig-python
@@ -54,6 +53,11 @@ post-destroot {
         LICENSE \
         README \
         ${docdir}
+    
+    set appdir ${destroot}${applications_dir}/${name}.app/Contents/MacOS
+    xinstall -d ${appdir}
+    xinstall -m 755 ${filespath}/${name}.in ${appdir}/${name}
+    reinplace "s|@PREFIX@|${prefix}|g" ${appdir}/${name}
 }
 
 livecheck.type              regex
