--- a/dports/gnome/gst-plugins-gl/Portfile
+++ b/dports/gnome/gst-plugins-gl/Portfile
@@ -26,7 +26,10 @@ checksums           md5     878fe4199be1c94f8aa2f7f23891cc95 \
                     sha1    bbeb7ebd46a9098bb32fe871ecb1891b58aff26e \
                     rmd160  1a6ca7f2922a2dbccc6a6106d56e0b28c0fb42e0
 
-universal_variant   no
+universal_variant       no
+# gst-plugins-gl sees libsdl if it is present and uses it to build examples which 
+# fail to build as of 0.10.2
+configure.args-append   --disable-examples
 
 post-extract {
     reinplace "s|-flat_namespace -undefined suppress|-undefined define_a_way|g" \
