duply: switch duplicity to a runtime dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@73258 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/duply/Portfile
+++ b/dports/sysutils/duply/Portfile
@@ -25,7 +25,7 @@ distname            ${name}_${version}
 checksums           sha1    80f4c510e2a35115273311db21a6024fda9d66bf \
                     rmd160  1db7fc679cc93eb8a430f1e9e2a75b0ac5c95d81
 
-depends_lib         port:duplicity
+depends_run         port:duplicity
 
 use_configure       no
 
