--- a/dports/multimedia/swfdec/Portfile
+++ b/dports/multimedia/swfdec/Portfile
@@ -24,7 +24,11 @@ checksums       md5     aece501d0e73f3e564200a44ec03c385 \
                 rmd160  1931b2c8b0ed54212e43fc8638b118c6bc559dda
 
 depends_lib     port:gst-plugins-base \
+                port:liboil \
                 port:libsoup
+
+# liboil is not universal
+universal_variant no
 
 pre-configure {
     reinplace "s|-Wl,-Bsymbolic||g" ${worksrcpath}/configure
