svndumptool: use python 2.6
git-svn-id: https://svn.macports.org/repository/macports/trunk@73260 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/svndumptool/Portfile
+++ b/dports/devel/svndumptool/Portfile
@@ -2,11 +2,11 @@
 # $Id$
 
 PortSystem              1.0
-PortGroup               python25 1.0
+PortGroup               python26 1.0
 
 name                    svndumptool
 version                 0.6.1
-revision                1
+revision                2
 categories              devel
 platforms               darwin
 maintainers             ryandesign
@@ -32,6 +32,8 @@ checksums \
     md5     8b99ca96557859404c271c076dc313d5 \
     sha1    fc49a209f4de6daaa115e1a945e55b68dfb511df \
     rmd160  f14e2d5c2313f92b6c55e5d059efe222daf0863e
+
+python.link_binaries_suffix
 
 livecheck.type          regex
 livecheck.url           ${homepage}
