nesc: update to 1.3.2, fix livecheck, and set new maintainer (#26645)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73261 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/nesc/Portfile
+++ b/dports/lang/nesc/Portfile
@@ -3,25 +3,28 @@
 PortSystem 1.0
 
 name nesc
-version 1.3.0
+version 1.3.2
 categories lang wsn
-maintainers yahoo.co.jp:notalpe
+maintainers musaloiu.com:razvan
 description Compiler for the nesC language.
 homepage http://nescc.sourceforge.net/
 platforms darwin
 
 long_description nesC is a compiler for a new language (based on C) designed \
-	to support the TinyOS project, an operating system for wireless \
-	sensor network platforms.
+        to support the TinyOS project, an operating system for wireless \
+        sensor network platforms.
 
 master_sites sourceforge:nescc
 
-checksums md5     1abc77e718bc0b9da37c34db6b4bf444 \
-  sha1    6619495a43ecbb8705d9a72137a8b4de69651598 \
-  rmd160  eb958c57ce68e206edfb235843bd4745b7391d59
+checksums           md5     9daf68f3d7f4a188d4de9d50c8bc3188 \
+                    sha1    11a8bf0b0e14d410faef34815b6a62cdb071fc1e \
+                    rmd160  de4a435578a1aab515a0aa5bd5c378c0ca7b97e3
 
 depends_lib port:automake \
   port:autoconf
 
 configure.args --exec-prefix=${prefix}
 
+livecheck.type	regex
+livecheck.url	http://sourceforge.net/api/file/index/project-id/56288/mtime/desc/rss
+livecheck.regex	"nesc-(\\d+(?:\\.\\d+)*).tar.gz"
