adding typedefs to hdpf.h, cf. http://lua-users.org/lists/lua-l/2010-08/msg00081.html discussion thread
git-svn-id: https://svn.macports.org/repository/macports/trunk@73267 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/libharu/Portfile
+++ b/dports/print/libharu/Portfile
@@ -4,6 +4,7 @@ PortSystem              1.0
 
 name                    libharu
 version                 2.2.0
+revision                1
 categories              print
 platforms               darwin
 maintainers             and.damore openmaintainer
@@ -28,6 +29,8 @@ depends_lib             port:libpng
 checksums               md5     1f366cfcb3d38627bad2654073e3307f \
                         sha1    a76765426165974395fdc0e4de6a81eeaf7a237a \
                         rmd160  3e2cbef26fcd89f8664acbfcfdc8d88caf2015da
+
+patchfiles              patch-hpdf_h.diff
 
 configure.args-append --with-png=${prefix} \
                       --with-zlib=${prefix}
