--- a/dports/perl/p5-text-diff/Portfile
+++ b/dports/perl/p5-text-diff/Portfile
@@ -3,12 +3,15 @@
 PortSystem		1.0
 PortGroup		perl5 1.0
 
-perl5.setup		Text-Diff 0.35
+perl5.setup		Text-Diff 1.37
 maintainers		geeklair.net:dluke
 description		This is a Perl extension for performing diffs on files and record sets.
 long_description	${description}
 
-checksums		md5 4931662ea353384dec2a54a71b26ee8c
+checksums           md5     52c1cba785ecfbbca242b57742173665 \
+                    sha1    c9c3209656cb2aa5132561c3535ac00772a158ee \
+                    rmd160  3f72d946eaddcd6d109428007fc50f303b31e091
+
 platforms		darwin
 depends_lib-append	port:p5-algorithm-diff
 
