emacs: librsvg is found automatically if installed, so make it a dependency.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73274 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/emacs/Portfile
+++ b/dports/editors/emacs/Portfile
@@ -56,14 +56,16 @@ variant x11 description {Builds emacs as a X11 program with Lucid widgets} {
                             --with-jpeg \
                             --with-tiff \
                             --with-gif \
-                            --with-png
+                            --with-png \
+                            --with-rsvg
     depends_lib-append      port:xorg-libXmu \
                             port:xorg-libXaw \
                             port:xpm \
                             lib:libjpeg:jpeg \
                             lib:libtiff:tiff \
                             path:include/gif_lib.h:giflib \
-                            lib:libpng:libpng
+                            lib:libpng:libpng \
+                            lib:librsvg:librsvg
 }
 
 variant motif requires x11 description {Builds emacs as an X11 program with Motif widgets} {
