--- a/dports/graphics/wxWidgets-devel/Portfile
+++ b/dports/graphics/wxWidgets-devel/Portfile
@@ -6,7 +6,7 @@ name			wxWidgets-devel
 version			2.9.1
 categories		graphics devel
 platforms		darwin
-maintainers		jwa mww
+maintainers		jwa
 description		mature cross-platform C++ GUI framework
 long_description	wxWidgets is a mature open-source cross-platform C++ \
     GUI framework for Mac OS, Unix, Linux, Windows. It can \
