--- a/dports/graphics/wxWidgets/Portfile
+++ b/dports/graphics/wxWidgets/Portfile
@@ -9,7 +9,7 @@ epoch			2
 version			2.8.11
 categories		graphics devel
 platforms		darwin
-maintainers		mww jwa
+maintainers		jwa
 description		mature cross-platform C++ GUI framework
 long_description	wxWidgets is a mature open-source cross-platform C++ \
     GUI framework for Mac OS, Unix, Linux, Windows. It can \
