--- a/dports/python/py27-wxpython/Portfile
+++ b/dports/python/py27-wxpython/Portfile
@@ -8,7 +8,7 @@ version		2.8.11.0
 
 categories	python graphics
 platforms	darwin
-maintainers	mww jwa
+maintainers	jwa
 description	Python interface to the wxWindows cross platform GUI
 long_description	wxPython is a GUI toolkit for the Python programming \
     language. It allows Python programmers to create \
