pspp-devel: update to 20101108040501
git-svn-id: https://svn.macports.org/repository/macports/trunk@73277 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,10 +4,10 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20101104040502
-set buildhash       g0ddc66
+set buildstamp      20101108040501
+set buildhash       g08d746
 version             0.7.6
-revision            1
+revision            2
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -36,8 +36,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    a0ac91653fd4424e5c32638aa66741be9b51b71b \
-                    rmd160  d3fc7555adb210f167d38f87418a29c43cdba65b
+checksums           sha1    674062fd19ce2fdc2002dab3a9f006aaf53093c8 \
+                    rmd160  1b9beeb3af9a65885594905183415bbba402c8bd
 
 #configure.optflags  -O0
 #configure.cflags-append -g
