mysql5, mysql5-server: update to 5.1.52
git-svn-id: https://svn.macports.org/repository/macports/trunk@73278 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/mysql5/Portfile
+++ b/dports/databases/mysql5/Portfile
@@ -9,7 +9,7 @@ PortGroup               muniversal 1.0
 
 name                    mysql5
 conflicts               mysql5-devel mysql4
-version                 5.1.51
+version                 5.1.52
 set branch              [join [lrange [split ${version} .] 0 1] .]
 homepage                http://www.mysql.com/
 categories              databases
@@ -34,9 +34,8 @@ master_sites \
     http://mirror.facebook.net/mysql/Downloads/MySQL-${branch}/ \
     http://ftp.plusline.de/mysql/Downloads/MySQL-${branch}/
 
-checksums               md5     c12bf24493688c51c6cff5e8c6563830 \
-                        sha1    45aa05a6a70d67b379272ec19ad3023230c94079 \
-                        rmd160  033fc88fba226caf2ec6a34ac3875deab3006f42
+checksums               sha1    5ed4a3c12662b0329df870f4dcebea6903e94265 \
+                        rmd160  5809c7a5932a014fe412ddc5b9f15632c7367c27
 
 depends_lib \
     port:zlib \
