--- a/dports/graphics/wxWidgets26/Portfile
+++ b/dports/graphics/wxWidgets26/Portfile
@@ -7,7 +7,7 @@ version			2.6.4
 revision        2
 categories		graphics devel
 platforms		darwin
-maintainers		mww jwa
+maintainers		jwa
 description		mature cross-platform C++ GUI framework
 long_description	wxWidgets is a mature open-source cross-platform C++ \
 			GUI framework for Mac OS, Unix, Linux, Windows. It can \
