--- a/dports/archivers/gnutar/Portfile
+++ b/dports/archivers/gnutar/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name                gnutar
-version             1.23
+version             1.25
 categories          archivers
 maintainers         mww
 license             GPLv3
@@ -16,15 +16,16 @@ long_description \
 
 homepage            http://www.gnu.org/software/tar/
 master_sites        gnu:tar
-checksums           md5     41e2ca4b924ec7860e51b43ad06cdb7e \
-                    sha1    6f3b1443a019da02e4ec20a1446d4aa54b488071 \
-                    rmd160  e79062b7f69d80b734445306f69fb8b96801e909
+checksums           md5     6e497f861c77bbba2f7da4e10270995b \
+                    sha1    0f0c090e51d127cbeffbb9aeeb90db1181d82aed \
+                    rmd160  4798d95b8816f5b7a90af8f0596a2e6b70cacb5e
 distname            tar-${version}
 use_bzip2           yes
 platforms           darwin
 
 depends_lib         port:gettext port:libiconv
 
+configure.env-append FORCE_UNSAFE_CONFIGURE=1
 configure.args      --program-prefix=gnu \
                     --infodir=${prefix}/share/info
 
