db47: add patch 4
git-svn-id: https://svn.macports.org/repository/macports/trunk@73286 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/db47/Portfile
+++ b/dports/databases/db47/Portfile
@@ -6,7 +6,7 @@ PortGroup  muniversal 1.0
 
 name			db47
 version			4.7.25
-revision        1
+revision        2
 set branch		[join [lrange [split ${version} .] 0 1] {}]
 categories		databases
 maintainers		mcalhoun openmaintainer
@@ -28,7 +28,8 @@ patch_sites     http://download.oracle.com/berkeley-db/patches/db/${version}/
 patchfiles \
     patch.${version}.1 \
     patch.${version}.2 \
-    patch.${version}.3
+    patch.${version}.3 \
+    patch.${version}.4
 
 distname		db-${version}
 patch.dir		${workpath}/${distname}
@@ -49,7 +50,11 @@ checksums		\
     patch.${version}.3 \
     md5     6fcd69f64f5b34bfe8f0a63cc2e402c1 \
     sha1    1f707e6c65c8ebe9fa7b36333c6de76f2d480cf5 \
-    rmd160  a0ef673d8127be825444aaa12711dcf75b7fda1a
+    rmd160  a0ef673d8127be825444aaa12711dcf75b7fda1a \
+    patch.${version}.4 \
+    md5     c71830a1303cd34595ca655257196eec \
+    sha1    0eb5566ad2ca2232b92d8c71285bfaf32aba54dc \
+    rmd160  0b235122060785887eb41fa7657379bd4f1e57bf
 
 configure.dir  ${worksrcpath}/build_unix
 build.dir      ${configure.dir}
