lbdb: add gpg2 variant (#20142, maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73288 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/lbdb/Portfile
+++ b/dports/mail/lbdb/Portfile
@@ -37,6 +37,10 @@ post-destroot {
 	file copy ${configure.dir}/lbdb.el ${destroot}${prefix}/share/emacs/site-lisp
 }
 
-variant gpg { configure.args-append --with-gpg
+variant gpg conflicts gpg2 description {Add support for GnuPG version 1} {
+				configure.args-append --with-gpg
 				depends_lib-append port:gnupg }
+variant gpg2 conflicts gpg description {Add support for GnuPG version 2} {
+				configure.args-append --with-gpg=${prefix}/bin/gpg2
+				depends_lib-append port:gnupg2 }
 variant ldap { depends_lib-append port:p5-perl-ldap }
