xmlto: remove dependency on texlive/dblatex because most uses of xmlto don't require it and texlive is a heavyweight dependency.
If actually needed to build PDF documentation, dependents of xmlto
should add a dependency on dblatex and/or texlive-htmlxml; I have not
yet found any ports where it is necessary.


git-svn-id: https://svn.macports.org/repository/macports/trunk@73294 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/xmlto/Portfile
+++ b/dports/textproc/xmlto/Portfile
@@ -31,16 +31,13 @@ depends_run     port:coreutils \
                 port:findutils \
                 port:getopt \
                 port:libpaper \
-                port:texlive \
-                port:texlive-htmlxml \
                 port:libxml2 \
                 port:libxslt \
                 port:docbook-xml \
                 port:docbook-xsl \
-                port:fop \
-                port:dblatex
+                port:fop
 
-depends_skip_archcheck dblatex findutils coreutils
+depends_skip_archcheck findutils coreutils
 
 patchfiles      patch-xmlto.in.diff
 
