adjust xpdf to install its CLI tools with mangled names (xpdf-*), add variant no_mangle_names to not do so. add new port xpdf-tools, makes links from xpdf CLI tools fromt heir xpdf-* names to "plain" names adjust poppler port to conflict with xpdf-tools
git-svn-id: https://svn.macports.org/repository/macports/trunk@73295 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/poppler/Portfile
+++ b/dports/graphics/poppler/Portfile
@@ -30,6 +30,8 @@ depends_lib \
     port:openjpeg \
     port:poppler-data
 
+conflicts   port:xpdf-tools
+
 post-patch {
     reinplace "s|\$includedir|${prefix}/include|g" \
         ${worksrcpath}/configure
