--- a/dports/graphics/xpdf/Portfile
+++ b/dports/graphics/xpdf/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 
 name         xpdf
 version      3.02
-revision     7
+revision     8
 description  Xpdf is a viewer for PDF files.
 long_description \
     Xpdf is a viewer for Portable Document Format \
@@ -60,7 +60,7 @@ extract.only ${xpdfmain}
 
 depends_lib \
 	port:xorg-libXp port:xpm port:xorg-libXt port:freetype \
-	port:poppler port:libpaper lib:libXm:openmotif port:t1lib
+	port:libpaper lib:libXm:openmotif port:t1lib
 
 depends_run  path:share/ghostscript/fonts:ghostscript
 
@@ -121,11 +121,18 @@ variant drm description {Obey access restrictions in PDF files} {
     patchfiles-delete xpdf-${version}-salvage-your-eye.patch
 }
 
+variant no_mangle_names description {do not mangle the CLI tool names, conflicts with poppler} {
+	conflicts-append port:poppler
+}
+
 post-destroot {
-    foreach i { pdffonts pdfimages pdfinfo pdftoppm pdftops pdftotext } {
-        delete ${destroot}${prefix}/bin/${i}
-        delete ${destroot}${prefix}/share/man/man1/${i}.1
-    }
+	if {! [variant_isset no_mangle_names]} {
+		## rename the CLI tools to xpdf-${TOOL_NAME} to avoid conflicts with poppler
+		foreach binFile { pdffonts pdfimages pdfinfo pdftoppm pdftops pdftotext } {
+			move ${destroot}${prefix}/bin/${binFile}  ${destroot}${prefix}/bin/${name}-${binFile}
+			move ${destroot}${prefix}/share/man/man1/${binFile}.1 ${destroot}${prefix}/share/man/man1/${name}-${binFile}.1
+		}
+	}
 }
 
 post-install {
