New upstream 2.8.1 release.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73297 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/scala28/Portfile
+++ b/dports/lang/scala28/Portfile
@@ -4,8 +4,7 @@ PortSystem 1.0
 PortGroup select 1.0
 
 name            scala28
-version         2.8.0
-revision        3
+version         2.8.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      lang java
 maintainers     openmaintainer brett blair
@@ -22,11 +21,11 @@ platforms       darwin
 supported_archs noarch
 
 master_sites    ${homepage}downloads/distrib/files/
-distname        scala-2.8.0.final
+distname        scala-${version}.final
 extract.suffix  .tgz
-checksums       md5 f250015d178f05b08bd53baba55c5d46 \
-                sha1 9f06c56718b43a14e8dff412f532e3bfe36f3128 \
-                rmd160 647774d2eea5625796ecf0893d55e2081940afb7
+checksums       md5 4fa66742341b5c9f6877ce64d409cb92 \
+                sha1 b225e97652e06a3881de64321a46a488eaa3a15e \
+                rmd160 92e063f0f7ca71d0353b155ba86f018e4d024abe
 
 depends_lib     port:scala_select
 
