--- a/dports/devel/wxd/Portfile
+++ b/dports/devel/wxd/Portfile
@@ -2,6 +2,7 @@
 PortSystem      1.0
 name            wxd
 version         0.15
+revision        1
 maintainers     usami-k
 platforms       darwin
 categories      devel
@@ -19,6 +20,7 @@ depends_lib     bin:gdc:gdc \
                 port:wxWidgets
 
 use_configure   no
+supported_archs i386 ppc
 
 destroot.destdir DESTDIR=${destroot} PREFIX=${prefix}
 post-destroot {
