--- a/dports/archivers/libzzip/Portfile
+++ b/dports/archivers/libzzip/Portfile
@@ -1,3 +1,4 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem      1.0
@@ -5,6 +6,7 @@ PortSystem      1.0
 name            libzzip
 set my_name     zziplib
 version         0.13.59
+revision        1
 categories      archivers devel
 platforms       darwin
 maintainers     nomaintainer
@@ -38,6 +40,13 @@ set docdir ${prefix}/share/doc/${name}
 if {[variant_isset universal]} {
     patchfiles-append patch-configure.ac.diff
     use_autoconf yes
+}
+
+post-configure {
+    set builddir [glob -dir ${worksrcpath} "Darwin*.d"]
+    reinplace -E {s|-arch [a-z0-9_]+||g} \
+        ${builddir}/zzip/zziplib-uninstalled.pc \
+        ${builddir}/zzip/zziplib.pc
 }
 
 post-destroot {
