--- a/dports/devel/mpfr/Portfile
+++ b/dports/devel/mpfr/Portfile
@@ -9,7 +9,7 @@ PortGroup  muniversal 1.0
 
 name                mpfr
 set base_version    3.0.0
-set patch_level     7
+set patch_level     8
 version             ${base_version}-p${patch_level}
 #version             ${base_version}
 categories          devel math
@@ -59,6 +59,10 @@ checksums \
         md5     67a2dcf24c30d75fdbe62563edf58901 \
         sha1    f34e0b4bc0b719e0a427cbef7c41e4853d7fe9da \
         rmd160  0b5053f4f77a970701dd4a6048b7bb0533fe1cf6 \
+    patch08 \
+        md5     737d88627f6f90af1fc0afa930f1e962 \
+        sha1    ba47fc128717ee71b4a46a067ae4b29eed2c6b82 \
+        rmd160  1e379f1bbb67e5b5c9f2bf45f9e41a91b0571e95 \
     [suffix ${distname}] \
         md5     f45bac3584922c8004a10060ab1a8f9f \
         sha1    8ae8bc72ac26a0f17ad9f57c520264c056c64770 \
