p5-mailtools: whitespace / reformatting / add modeline; see #27233
git-svn-id: https://svn.macports.org/repository/macports/trunk@73312 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-mailtools/Portfile
+++ b/dports/perl/p5-mailtools/Portfile
@@ -1,15 +1,18 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem		1.0
-PortGroup		perl5 1.0
+PortSystem          1.0
+PortGroup           perl5 1.0
 
-perl5.setup		MailTools 2.04 Mail
-maintainers		nomaintainer
-description		mail related perl modules
-long_description	This is MailTools, a set of perl modules related to \
-					mail applications
-checksums		md5 d21ea4f375d1e5f3da6b0a4e8ba1e2c6 \
-				sha1 6fccd04f9db0f478e19eec047be3bf0a1d8297f5
-platforms		darwin
+perl5.setup         MailTools 2.04 Mail
+platforms           darwin
+maintainers         nomaintainer
+supported_archs     noarch
 
-supported_archs noarch
+description         mail related perl modules
+
+long_description    This is MailTools, a set of perl modules related to \
+                    mail applications
+
+checksums           md5     d21ea4f375d1e5f3da6b0a4e8ba1e2c6 \
+                    sha1    6fccd04f9db0f478e19eec047be3bf0a1d8297f5
