p5-mailtools: update to 2.07, new maintainer, update description, add license; see #27233
git-svn-id: https://svn.macports.org/repository/macports/trunk@73313 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-mailtools/Portfile
+++ b/dports/perl/p5-mailtools/Portfile
@@ -4,15 +4,22 @@
 PortSystem          1.0
 PortGroup           perl5 1.0
 
-perl5.setup         MailTools 2.04 Mail
+perl5.setup         MailTools 2.07 Mail
 platforms           darwin
-maintainers         nomaintainer
+maintainers         l2g.to:larry+macports
+license             Artistic/GPL
 supported_archs     noarch
 
-description         mail related perl modules
+description         Mail-related Perl modules (recommended legacy use only)
 
-long_description    This is MailTools, a set of perl modules related to \
-                    mail applications
+long_description    MailTools is a set of Perl modules related to mail \
+                    applications. These modules are very old (partially \
+                    written before MIME!). If you're starting a new e-mail \
+                    application, consider using MailBox instead (p5-mail-box \
+                    in MacPorts). It is a little harder to learn, but at \
+                    least implements all RFCs correctly.
 
-checksums           md5     d21ea4f375d1e5f3da6b0a4e8ba1e2c6 \
-                    sha1    6fccd04f9db0f478e19eec047be3bf0a1d8297f5
+checksums           sha1    3842c5f2781919c0aa72152a06138825ba896c00 \
+                    rmd160  28d00701e6bae074ff9b2b673be2a4405e299c52
+
+depends_lib-append  port:p5-timedate
