--- a/dports/archivers/lzmautils/Portfile
+++ b/dports/archivers/lzmautils/Portfile
@@ -21,6 +21,7 @@ distname        lzma-${version}
 checksums       md5 2a748b77a2f8c3cbc322dbd0b4c9d06a
 
 conflicts       xz-devel
+replaced_by     xz
 
 livecheck.url   ${homepage}
 livecheck.regex LZMA Utils (\[0-9.\]*) was released
