simulate trunk's use_lzma in portfiles to avoid installing both xz and the conflicting lzmautils
git-svn-id: https://svn.macports.org/repository/macports/trunk@73320 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnucash/Portfile
+++ b/dports/gnome/gnucash/Portfile
@@ -25,7 +25,8 @@ master_sites      sourceforge \
                   http://www.gnucash.org/pub/gnucash/sources/stable/
 
 # lzma archive for gnucash is 40% smaller than bzip2
-use_lzma          yes
+use_xz            yes
+extract.suffix    .tar.lzma
 checksums         md5     b83c188506f749929a69b48c0632d3b8 \
                   sha1    b7debe12fcb2770f5ec4524ec56c57adbdad19d2 \
                   rmd160  2e16625b59762a52cea09cfa8139138ee21c6fb2
