--- a/dports/sysutils/mc/Portfile
+++ b/dports/sysutils/mc/Portfile
@@ -21,7 +21,8 @@ homepage	http://www.midnight-commander.org/
 platforms	darwin
 master_sites	${homepage}downloads
 
-use_lzma	yes
+use_xz		yes
+extract.suffix	.tar.lzma
 
 checksums	md5     4cb7def4e959c21d671a30f2d243acf6 \
 		sha1    7781a66c24161d304192553a7f87541832ad61fe \
