--- a/dports/textproc/texinfo/Portfile
+++ b/dports/textproc/texinfo/Portfile
@@ -19,7 +19,8 @@ long_description        Texinfo is the official documentation format of the \
                 is used).
 homepage        http://www.gnu.org/software/texinfo/
 master_sites    gnu
-use_lzma        yes
+use_xz          yes
+extract.suffix  .tar.lzma
 
 checksums       md5 20b37e49464bd72df4c6cfba33340f87 \
                 sha1 676ec9aa25a97c05dff66fba5225f9e101160063 \
