--- a/dports/net/transmission/Portfile
+++ b/dports/net/transmission/Portfile
@@ -23,7 +23,8 @@ master_sites    http://download.m0k.org/transmission/files/
 checksums       md5     bb1888dd0c0c6a9944a80d0a270d9375 \
                 sha1    e8dc6cb7b4b3211a27f227026ed609c663772a9a \
                 rmd160  783694c0076c48b173bc305af4172be1ab4e673b
-use_lzma        yes
+use_xz          yes
+extract.suffix  .tar.lzma
 
 patchfiles      patch-project.pbxproj.diff
 platforms       macosx
