--- a/dports/textproc/enca/Portfile
+++ b/dports/textproc/enca/Portfile
@@ -14,7 +14,8 @@ long_description	Enca is an Extremely Naive Charset Analyser. It \
 
 homepage	http://gitorious.org/enca
 master_sites	http://dl.cihar.com/enca/
-use_lzma	yes
+use_xz		yes
+extract.suffix	.tar.lzma
 
 checksums	md5     a47f916e776add18a4f5daa5d080c0bc \
 		sha1    acfc43da2fdc823f48679ac53b01dee0ed84c617 \
