Drizzle: update to 29 PCLauncher: update to 0.0.2 which requires Drizzle 29 PlasmaClient: fix crash when quitting if prefs directory doesn't exist, and now refer users to PCLauncher's Preferences window to change graphics settings
git-svn-id: https://svn.macports.org/repository/macports/trunk@73321 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -7,6 +7,7 @@ PortGroup                   cmake 1.0
 name                        PlasmaClient
 epoch                       1
 version                     0.0.2-347
+revision                    1
 categories                  games
 platforms                   darwin
 maintainers                 ryandesign
@@ -54,7 +55,8 @@ post-extract {
     reinplace "s|\r||g" ${worksrcpath}/win32dist/readme.rtf
 }
 
-patchfiles                  patch-win32dist-readme.rtf.diff
+patchfiles                  patch-win32dist-readme.rtf.diff \
+                            patch-create_directories.diff
 
 configure.args              -DBULLET_INCLUDE_DIR:PATH=${prefix}/include/bullet \
                             -DCMAKE_VERBOSE_MAKEFILE:BOOL=TRUE \
