--- a/dports/games/PCLauncher/Portfile
+++ b/dports/games/PCLauncher/Portfile
@@ -5,7 +5,7 @@ PortSystem                  1.0
 PortGroup                   xcode 1.0
 
 name                        PCLauncher
-version                     0.0.1-72772
+version                     0.0.2-73317
 categories                  games
 maintainers                 ryandesign
 homepage                    http://plasmaclient.servegame.org/
@@ -21,6 +21,8 @@ svn.url                     http://svn.macosforge.org/repository/macports/users/
 svn.revision                [lindex [split ${version} -] 1]
 worksrcdir                  ${name}
 
+depends_lib                 port:libhsplasma
+
 depends_run                 port:PlasmaClient \
                             port:Drizzle
 
@@ -32,10 +34,11 @@ post-extract {
     }
 }
 
-patchfiles                  patch-PCLauncher.applescript.diff
+patchfiles                  patch-LoginWindowController.m.diff \
+                            patch-PCLauncher.xcodeproj-project.pbxproj.diff
 
 post-patch {
-    reinplace "s|@PREFIX@|${prefix}|g" ${worksrcpath}/PCLauncher.applescript ${worksrcpath}/PCDownloader ${worksrcpath}/PCExtractor
+    reinplace "s|@PREFIX@|${prefix}|g" ${worksrcpath}/LoginWindowController.m ${worksrcpath}/PCLauncher.xcodeproj/project.pbxproj ${worksrcpath}/PCDownloader ${worksrcpath}/PCExtractor
 }
 
 post-destroot {
@@ -61,3 +64,10 @@ Instructions for using PlasmaClient are in the file ${prefix}/share/doc/PlasmaCl
 
 For more information, please visit the Guild of Writers' IRC channel at irc://irc.guildofwriters.com/#writers
 "
+
+platform darwin 8 {
+    depends_run-delete      port:Drizzle
+    if {![file isdirectory ${prefix}/share/mystonline/data/python] || ![file isdirectory ${prefix}/share/mystonline/data/SDL]} {
+        notes-append "\n\nOn Mac OS X 10.4 Tiger, ${name} cannot download the secure files for you. Manually copy the python and SDL directories into ${prefix}/share/mystonline/data from another Mac that has PlasmaClient."
+    }
+}
