libzzip: build as root if privilege dropping would normally build as nobody (#27243)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73322 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/archivers/libzzip/Portfile
+++ b/dports/archivers/libzzip/Portfile
@@ -49,6 +49,11 @@ post-configure {
         ${builddir}/zzip/zziplib.pc
 }
 
+# pax doesn't handle 32-bit uids, so running as nobody makes it fail...
+if {[getuid] == 0 && $macportsuser == "nobody"} {
+    build.asroot yes
+}
+
 post-destroot {
     xinstall -d ${destroot}${docdir}/html
 
