--- a/dports/archivers/xz/Portfile
+++ b/dports/archivers/xz/Portfile
@@ -23,7 +23,7 @@ checksums       md5 f3c0706d100ad2b6d63327584d026c50 \
 
 depends_lib     port:libiconv port:gettext
 
-conflicts       xz-devel lzmautils
+conflicts       xz-devel
 
 configure.args  --with-libiconv-prefix=${prefix} --with-libintl-prefix=${prefix}
 
