texlive-bin-extra: readd dependencies on latexmk and detex (which are normally parts of texlive's bin-extra collection but we already have separate ports for them)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73326 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/texlive-bin-extra/Portfile
+++ b/dports/tex/texlive-bin-extra/Portfile
@@ -6,7 +6,7 @@ PortGroup           texlive 1.0
 
 name                texlive-bin-extra
 version             18336
-revision            0
+revision            1
 
 categories          tex
 maintainers         dports
@@ -21,5 +21,7 @@ depends_lib         port:texlive-basic
 
 texlive.binaries    a2ping arlatex bibtex8 bibtexu bundledoc chktex chkweb ctangle ctie cweave de-macro deweb dt2dv dv2dt dviasm dvibook dviconcat dvicopy dvidvi dvigif dvihp dvilj dvilj2p dvilj4 dvilj4l dvilj6 dvipng dvipos dviselect dvisvgm dvitodvi dvitype e2pall findhyph fragmaster lacheck latex2man latexdiff latexdiff-vc latexrevise listings-ext.sh mkjobtexmf patgen pdf180 pdf270 pdf90 pdfatfi pdfbook pdfclose pdfcrop pdfflip pdfjam pdfjam-pocketmod pdfjam-slides3up pdfjam-slides6up pdfjoin pdfnup pdfopen pdfpun pdftosrc pkfix pkfix-helper pooltype ps4pdf purifyeps rpdfcrop synctex tangle texcount texdiff texdirflatten texdoc texdoctk texloganalyser tie tpic2pdftex weave
 
+depends_run         port:latexmk \
+                    port:detex
 
 texlive.texmfport
