--- a/dports/archivers/xz/Portfile
+++ b/dports/archivers/xz/Portfile
@@ -30,6 +30,9 @@ configure.args  --with-libiconv-prefix=${prefix} --with-libintl-prefix=${prefix}
 # previous version defaulted to static liblzma (through --enable-dynamic=mixed)
 configure.args-append --disable-shared
 
+# document that we always need legacy symlinks now that "lzmautils" refers here
+configure.args-append --enable-lzma-links
+
 # the internal "check.h" header conflicts with port check's <check.h>
 configure.cppflags -I${worksrcpath}/src/liblzma/check -I${prefix}/include
 
