port upgrade: XZ 5.0.0 (increases liblzma library version)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73334 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/liblzma/Portfile
+++ b/dports/devel/liblzma/Portfile
@@ -3,7 +3,7 @@
 PortSystem      1.0
 
 name            liblzma
-version         4.999.9beta
+version         5.0.0
 categories      devel
 platforms       darwin
 maintainers     afb openmaintainer
@@ -17,13 +17,9 @@ long_description \
 homepage        http://tukaani.org/xz/
 master_sites    ${homepage}
 distname        xz-${version}
-checksums       md5 f2073579b6da2fe35d453adee1aaf1b2 \
-                sha1 9627de3997ddcdb02f8d327e84b2cf1941ecd230 \
-                rmd160 1253ce01746c748c8549effa5041224044919c4e
-
-patchfiles      patch-sysctl-darwin.diff patch-bump-liblzma-major.diff
-
-configure.args  --with-libiconv-prefix=${prefix} --with-libintl-prefix=${prefix}
+checksums       md5 f3c0706d100ad2b6d63327584d026c50 \
+                sha1 bcce697d7f09584f0feb21e35b13a15ba7417a1f \
+                rmd160 c336b081bdd056290f18903b0b0c3b657b141d58
 
 # the internal "check.h" header conflicts with port check's <check.h>
 configure.cppflags -I${worksrcpath}/src/liblzma/check -I${prefix}/include
@@ -33,3 +29,7 @@ destroot.dir    ${worksrcpath}/src/liblzma
 platform darwin 10 {
     configure.args-append --disable-assembler
 }
+
+livecheck.url   ${homepage}
+livecheck.regex xz-(\[0-9.a-z\]*)\.tar\.gz
+livecheck.type  regexm
