--- a/dports/python/py25-liblzma/Portfile
+++ b/dports/python/py25-liblzma/Portfile
@@ -5,6 +5,7 @@ PortGroup python25 1.0
 
 name			py25-liblzma
 version			0.5.2
+revision		1
 categories		python archivers
 platforms		darwin
 maintainers		afb openmaintainer
