pyXX-sip: Hopefully addresses ticket #27193. Augment siputil.py to handle parsing of the QMake code "X = F $$X" (prepending), not just "X += F" (appending).
git-svn-id: https://svn.macports.org/repository/macports/trunk@73341 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py-sip/Portfile
+++ b/dports/python/py-sip/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            py-sip
 version         4.11.2
+revision        1
 categories      python devel
 maintainers     blair openmaintainer
 platforms       macosx
