--- a/dports/python/py31-sip/Portfile
+++ b/dports/python/py31-sip/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            py31-sip
 version         4.11.2
+revision        1
 categories      python devel
 maintainers     nomaintainer
 platforms       macosx
@@ -35,6 +36,9 @@ dist_subdir python
 set pyversion 3.1
 depends_lib-append port:python[strsed ${pyversion} {g/[.]//}]
 set pybin ${prefix}/bin/python${pyversion}
+
+# fix to allow for correct parsing of "X = Y $$X" in QMake files
+patchfiles    patch-siputils.py.diff
 
 configure.cmd ${pybin} configure.py
 
